Entity Framework Test

--- a/CoreLoginEfDbFirst/src/CoreLoginEfDbFirst/appsettings.json
+++ b/CoreLoginEfDbFirst/src/CoreLoginEfDbFirst/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "db_corelogin": "Server=SQL SERVER;Database=DATABASE;Trusted_Connection=True;user id=SQL USERNAME;password=SQL PASSWORD;"
+    "db_corelogin": "Server=vsubmission;Database=db_corelogin;Trusted_Connection=True;user id=mtbcweb;password=mtbcweb@mtbc;"
   },
   "Logging": {
     "IncludeScopes": false,
